crates/cypher-sema/src/snapshots/cypher_sema__resolve__tests__scope_shadowing_warn.snap
---
source: crates/cypher-sema/src/resolve.rs
expression: "render_result(&stmt, true)"
---
scopes: 6
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Match parent=Some(0) bindings=["a"]
  scope[2] kind=WithBarrier[a] parent=Some(1) bindings=[]
  scope[3] kind=Root parent=Some(2) bindings=["a"]
  scope[4] kind=Match parent=Some(3) bindings=[]
  scope[5] kind=Return parent=Some(4) bindings=[]
diagnostics: 0
